<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="radio_one_player_label">One Player</string>
    <string name="radio_two_players_label">Two Players</string>
   	<string name="player1_name_label">Player 1:</string>
   	<string name="player2_name_label">Player 2:</string>
   	<string name="player1_name_hint">Enter player 1 name here&#8230;</string>
   	<string name="player2_name_hint">Enter player 2 name here&#8230;</string>
    <string name="play_button_label">Play</string>
    <string name="player1_name">%1$s Won:</string>
    <string name="player2_name">%1$s Won:</string>
    <string name="draw_label">Draws:</string>
    <string name="next_move_hint">Next Move: %1$s</string>
    <string name="winner_declaration">%1$s has won the game!!!</string>
    <string name="game_draw">Game is drawn</string>
    <string name="new_game_label">New Game</string>
    <string name="exit_game_label">Exit</string>

</resources>
