<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ringo.tictactoe.MainActivity$PlaceholderFragment" >

    <RadioGroup
        android:id="@+id/radiogroup_players_cnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >
 
        <RadioButton
            android:id="@+id/radio_one_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_one_player_label" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/radio_two_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_two_players_label" />
 
    </RadioGroup>
    
	<GridLayout android:id="@+id/game_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip" 
    	android:orientation="horizontal"
        android:columnCount="2"
      	android:stretchMode="columnWidth"
        android:gravity="center"
        android:padding="10dip">
        
        <TextView
            android:id="@+id/name_label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
        	android:layout_column="0"
        	android:text="@string/player1_name_label" />
        
        <EditText
		    android:id="@+id/player1_name_input"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
            android:layout_row="0"
        	android:layout_column="1"
		    android:hint="@string/player1_name_hint"/>
        
        <TextView
            android:id="@+id/name_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
        	android:layout_column="0"
        	android:text="@string/player2_name_label" />
        
        <EditText
		    android:id="@+id/player2_name_input"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
            android:layout_row="1"
        	android:layout_column="1"
		    android:hint="@string/player2_name_hint"/>
        
    </GridLayout>
    
    <Button
        android:id="@+id/play_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dip"
        android:text="@string/play_button_label" />

</RelativeLayout>